# genlisp

./: .gitignore  CMakeLists.txt  manifest.xml  package.xml  setup.py  stack.xml  stack.yaml
cmake/: genlisp-extras.cmake.em  genlisp-extras.cmake.in
scripts/: CMakeLists.txt  gen_lisp.py
src/genlisp/: __init__.py  generate.py  genlisp_main.py
