<?xml version="1.0"?>
<package>
  <name>genlisp</name>
  <version>0.4.12</version>
  <description>
  Common-Lisp ROS message and service generators.
  </description>
  <maintainer email="bhaskara@willowgarage.com">Bhaskara Marthi</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/roslisp</url>
  <author email="bhaskara@willowgarage.com">Bhaskara Marti</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>

  <run_depend>genmsg</run_depend>

  <export>
    <message_generator>lisp</message_generator>
  </export>
</package>
